[package]
name = "bmf-parse"
version = "0.1.3"
edition = "2021"

# Crates.io Metadata
# github private email go brrrrr
authors = ["GamingLiamStudios <58615717+GamingLiamStudios@users.noreply.github.com>"]
description = "A parser for the BMF file format"
repository = "https://github.com/GamingLiamStudios/bmf-parse"
license = "MIT"

keywords = ["iso-bmff", "mp4", "parsing"]
categories = ["parsing"]

[dependencies]
paste = "1.0"
bstringify = "0.1"